heimdall/templates/test.yaml
kind: Service
apiVersion: v1
metadata:
  name: whoami-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: whoami.durp.info
spec:
  type: ExternalName
  externalName: 
    secretKeyRef:
      name: my-secret
      key: ip-address
