heimdall/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
  name: heimdall-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`heimdall.prd.durp.info`) && PathPrefix(`/`)
    middlewares:
    - name: authentik-proxy-provider
      namespace: traefik  
    kind: Rule
    services:
    - name: heimdall
      port: 80
  - match: Host(`heimdall.prd.durp.info`) && PathPrefix(`/outpost.goauthentik.io`)
    kind: Rule
    services:
    - name: ak-outpost-authentik-embedded-outpost
      namespace: authentik
      port: 9000
  tls:
    secretName: heimdall-tls

---

kind: Service
apiVersion: v1
metadata:
  name: heimdall-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: heimdall.prd.durp.info
spec:
  type: ExternalName
  externalName:.prd.durp.info
